crates/test-files/fixtures/compile_errors/traits_with_wrong_bounds.fe
trait Some {}

struct Bar {
    pub fn no_bounds<T>(val: T) {}
}
